use own IGV.js dist

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -15,10 +15,10 @@
     <!-- IGV.js -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="https://igv.org/web/release/1.0.9/igv-1.0.9.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/igv.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="https://igv.org/web/release/1.0.9/igv-1.0.9.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/igv.min.js"></script>
     <!--/ IGV.js -->
 
 
