--- a/client/public/index.html
+++ b/client/public/index.html
@@ -32,6 +32,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Profyle Portal</title>
+    <script type="text/javascript">
+      window.__PRELOADED_STATE__ = "{{SSR_JSON}}"
+    </script>
   </head>
   <body>
     <noscript>
