move inline script in public/index.html to start

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
+
+    <!-- Server-Side rendering initial data -->
+    <script type="text/javascript">
+      window.__PRELOADED_STATE__ = "{{SSR_JSON}}"
+    </script>
+
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
@@ -32,9 +38,6 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Profyle Portal</title>
-    <script type="text/javascript">
-      window.__PRELOADED_STATE__ = "{{SSR_JSON}}"
-    </script>
   </head>
   <body>
     <noscript>
