frontend: skip importing local fontawesome

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,7 @@
 
     <!-- IGV.js -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
+    <!-- IMPORTANT: font-awesome is also used by us. Import it in client/src/index.js if removing this -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/igv.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
