use service-worker

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -14,18 +14,18 @@
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
     -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
-    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" />
 
     <!-- IGV.js -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
-    <!-- IMPORTANT: font-awesome is also used by us. Import it in client/src/index.js if removing this -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/igv.css">
+    <!-- IMPORTANT: we're using a local-copy of font-awesome in client/src/index.js -->
+    <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/> -->
+    <link rel="stylesheet" href="%PUBLIC_URL%/static/css/igv.css">
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/igv.min.js"></script>
+    <script type="text/javascript" src="%PUBLIC_URL%/static/js/igv.min.js"></script>
     <!--/ IGV.js -->
 
 
