defer imported scripts

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,9 +23,9 @@
     <!-- IMPORTANT: we're using a local-copy of font-awesome in client/src/index.js -->
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"/> -->
     <link rel="stylesheet" href="%PUBLIC_URL%/static/css/igv.css">
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
-    <script type="text/javascript" src="%PUBLIC_URL%/static/js/igv.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script defer src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/jquery-ui.min.js"></script>
+    <script defer src="%PUBLIC_URL%/static/js/igv.min.js"></script>
     <!--/ IGV.js -->
 
 
