inline font style

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -16,7 +16,9 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" />
+
+    <!-- Inlined at client/src/styles/font.ubuntu.css -->
+    <!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" /> -->
 
     <!-- IGV.js -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
