index.html: add polyfill.io

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -20,6 +20,8 @@
     <!-- Inlined at client/src/styles/font.ubuntu.css -->
     <!-- <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet" /> -->
 
+    <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
+
     <!-- IGV.js -->
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.2/themes/smoothness/jquery-ui.css"/>
     <!-- IMPORTANT: we're using a local-copy of font-awesome in client/src/index.js -->
